--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "clsx": "^2.1.1",
+    "flowise-embed": "^1.3.13",
+    "flowise-embed-react": "^1.0.2",
     "framer-motion": "^11.3.21",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
