--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "clsx": "^2.1.1",
     "flowise-embed": "^1.3.13",
     "flowise-embed-react": "^1.0.2",
